--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     <title>ReactJS</title>
   </head>
   <body>
-    <h1>Intro ao React! Configurando babel e webpack.</h1>
+    <div id="app"></div>
+
     <script src="./bundle.js"></script>
   </body>
 </html>
